[package]
name = "osice"
version = "0.1.0"
authors = ["Martin Gabel <martin.gabel@becker-antriebe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

[dependencies]
bootloader = "0.9.16"
